Fixed broken input error in the media embed form when the viewport is narrow.

--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-media-embed/mediaform.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-media-embed/mediaform.css
@@ -27,6 +27,11 @@
 				min-width: 0;
 				width: 100%;
 			}
+
+			/* Let the long error messages wrap in the narrow form. */
+			& .ck-labeled-input__error {
+				white-space: normal;
+			}
 		}
 
 		& .ck-button {
